fix(ai): 修复AI助手面板中的空提示处理和异常捕获问题
- 添加了对空提示的验证和状态消息显示
- 在submitAiPromptWithText方法中添加try-catch异常处理
- 将getFirst()替换为get(0)以避免可能的索引越界问题
- 改进了错误消息的显示和助手响应处理